feat: data analysis