@@ -1,3 +1,3 @@
 #!/bin/sh
 
-/usr/bin/env /Library/Java/JavaVirtualMachines/zulu-19.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/srosati/Library/Application\ Support/Code/User/workspaceStorage/d142bc0eaf0effe1ecfdc39cbd0a0a19/redhat.java/jdt_ws/SS-TP5_3fa4554c/bin main.java.ar.edu.itba.ss.Main $*
+mvn exec:java -Dexec.mainClass="ar.edu.itba.ss.Main" -Dexec.args="$*"
